@@ -17,7 +17,10 @@
 
 	2015-10-10
 
-	* Fix a memory leak in close_wordlists().
+	* Fix a memory leak in bogoconfig.c's get_double(), part of the
+	  configuration parser.
+
+	* Fix a memory leak in wordlists*.c's close_wordlists().
 
 	* Fix an out-of-bounds memory read in maint.c's discard_token().
 	  Found with clang 3.6's address sanitizer.
